tests/ui/range/range_traits-2.stderr
error[E0204]: the trait `Copy` cannot be implemented for this type
  --> $DIR/range_traits-2.rs:4:8
   |
LL | #[derive(Copy, Clone)]
   |          ---- in this derive macro expansion
LL | struct R(Range<usize>);
   |        ^ ------------ this field does not implement `Copy`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0204`.
