tests/ui/range/range_traits-2.rs
use std::ops::*;

#[derive(Copy, Clone)]
struct R(Range<usize>); //~ ERROR Copy

fn main() {}
